chore: Use UID in tracker importer [DHIS2-17790]